k8s/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: dev

#---
#apiVersion: v1
#kind: Pod
#metadata:
#  name: demo
#  namespace: dev
#  labels:
#    name: demo
#spec:
#  containers:
#  - name: demo
#    image: demo:1.0
#    ports:
#    - containerPort: 1103
