k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-ingress
  namespace: dev
  annotations:
    # ========== 只新增这一行，引用上面定义的middleware ==========
    traefik.ingress.kubernetes.io/router.middlewares: dev-strip-api@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: demo.com
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: demo-service
                port:
                  number: 1103
